# shipcon_msgs

./: CMakeLists.txt  package.xml
msg/: PropellerState.msg  ShipState.msg  ShipStateStamped.msg  ShipsimPropCtrl.msg  ShipsimRudderCtrl.msg
msg/device/actuators/: MotorCommand.msg  MotorHealth.msg  MotorInfo.msg  RudderCommand.msg  RudderHealth.msg  RudderInfo.msg
msg/device/common/: SignalStatus.msg
msg/device/gnss/: GnssClock.msg  GnssHeading.msg  GnssPosition.msg  gps_local_position.msg  gps_navinfo.msg  gps_position.msg
msg/device/gyro/: GyroInfo.msg  gyro.msg
msg/device/motor/: MotorCommand.msg  MotorHealth.msg  MotorInfo.msg
msg/device/power/: BatteryInfo.msg  PowerInfo.msg  error.msg  mode.msg  motor_info.msg
msg/device/propeller/: PropellerCommand.msg  PropellerHealth.msg  PropellerInfo.msg  actuators.msg
msg/device/rc_control/: JoyInfo.msg  RcInfo.msg  ToggleInfo.msg
msg/device/rudder/: RudderCommandTwin.msg  RudderInfo.msg  RudderInfoStamped.msg  RudderInfoTwin.msg
msg/navigation/: ControlMode.msg  NavigationInfo.msg  SpeedInfo.msg
msg/shipinfo/: RudderState.msg
srv/device/motor/: GetMotorSpec.srv  GetRudderSpec.srv
